fixing overflow

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,7 @@
+* {
+    overflow: hidden !important;
+}
+
 html {
     overflow: hidden !important;
 }
